fix location card overflow image width. Currently changing UI for weather icon

--- a/my-app/src/styles/calendarStyle.scss
+++ b/my-app/src/styles/calendarStyle.scss
@@ -42,7 +42,7 @@ $current-time-color: #0a97b7 !default;
 
 $rbc-css-prefix: rbc-i !default;
 
-$today-highlight-bg: #eaf6ff !default;
+$today-highlight-bg: #f2f8fd !default;
 
 @import 'react-big-calendar/lib/sass/styles';
 @import 'react-big-calendar/lib/addons/dragAndDrop/styles'; // if using DnD
